--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,43 +1,44 @@
 <html xmlns:th="http://thymeleaf.org"
       xmlns="http://www.w3.org/1999/html">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <style>
         .card {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             max-width: 300px;
             margin: auto;
-            text-align: center;
+            padding: 10px;
             font-family: arial;
         }
 
-        .title {
-            color: grey;
-            font-size: 18px;
-        }
+        /*.title {*/
+        /*    color: grey;*/
+        /*    font-size: 18px;*/
+        /*}*/
 
-        button {
-            border: none;
-            outline: 0;
-            display: inline-block;
-            padding: 8px;
-            color: white;
-            background-color: #000;
-            text-align: center;
-            cursor: pointer;
-            width: 100%;
-            font-size: 18px;
-        }
+        /*button {*/
+        /*    border: none;*/
+        /*    outline: 0;*/
+        /*    display: inline-block;*/
+        /*    padding: 8px;*/
+        /*    color: white;*/
+        /*    background-color: #000;*/
+        /*    text-align: center;*/
+        /*    cursor: pointer;*/
+        /*    width: 100%;*/
+        /*    font-size: 18px;*/
+        /*}*/
 
-        a {
-            text-decoration: none;
-            font-size: 22px;
-            color: black;
-        }
+        /*a {*/
+        /*    text-decoration: none;*/
+        /*    font-size: 22px;*/
+        /*    color: black;*/
+        /*}*/
 
-        button:hover, a:hover {
-            opacity: 0.7;
-        }
+        /*button:hover, a:hover {*/
+        /*    opacity: 0.7;*/
+        /*}*/
     </style>
 </head>
 <body>
@@ -46,13 +47,32 @@
 
 <div class="card">
     <form th:action="@{/register}" method="post">
-        <p>Name: <input type="text" name="name"> </p>
-        <p>Surname: <input type="text" name="surname"> </p>
-        <p>Username: <input type="text" name="username"> </p>
-        <p>E-mail: <input type="text" name="email"> </p>
-        <p>Password: <input type="password" name="password"> </p>
-        <p>Repeat password: <input type="password" name="repeatedPassword"> </p>
-        <p><input type="submit" value="Register"></p>
+        <div class="form-group">
+        <label for="name">Name</label>
+        <input class="form-control" type="text" name="name" id="name" placeholder="Enter name">
+        </div>
+        <div class="form-group">
+            <label for="surname">Surname</label>
+            <input class="form-control" type="text" name="surname" id="surname" placeholder="Enter surname">
+        </div>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input class="form-control" type="text" name="username" id="username" placeholder="Enter username">
+        </div>
+        <div class="form-group">
+            <label for="username">Email</label>
+            <input class="form-control" type="email" name="email" id="email" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input class="form-control" type="password" name="password" id="password" placeholder="Password">
+        </div>
+        <div class="form-group">
+            <label for="repeatedPassword">Retype password</label>
+            <input class="form-control" type="password" name="repeatedPassword" id="repeatedPassword" placeholder="Retype password">
+        </div>
+
+        <p><input type="submit" class="btn btn-primary" value="Register"></p>
     </form>
 </div>
 
