--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,9 @@
             <form th:action="@{/login}">
                 <p class="text-white">Username: <input type="text"></p>
                 <p class="text-white">Password: <input type="text"></p>
-                <label class="text-white"> Not registered?  <input type="button" onclick="openRegForm()" class="btn btn-primary" id="registerBtn" value="Register"></input></label>
+                <label class="text-white"> Not registered?
+                    <input type="button" onclick="openRegForm()" class="btn btn-primary" id="registerBtn" value="Register"/>
+                </label>
                 <p><input type="submit" class="btn btn-info" value="Log in"></p>
             </form>
         </div>
