--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,25 +21,23 @@
             <form th:action="@{/login}">
                 <p class="text-white">Username: <input type="text"></p>
                 <p class="text-white">Password: <input type="text"></p>
-                <label class="text-white"> Not registered?
-                    <input type="button" onclick="openRegForm()" class="btn btn-primary" id="registerBtn" value="Register"/>
-                </label>
+                <label class="text-white"> Not registered?  <input type="button" onclick="openRegForm()" class="btn btn-primary" id="registerBtn" value="Register"></input></label>
                 <p><input type="submit" class="btn btn-info" value="Log in"></p>
             </form>
         </div>
     </div>
     <nav class="navbar navbar-dark bg-dark navbar-fixed-top" >
         <div class="">
-        <a class="active text-white" href="#home">Home</a>
-        <a class="text-white" href="#news">News</a>
-        <a class="text-white" href="#contact">Contact</a>
-        <a class="text-white" href="#about">About</a>
+            <a class="active text-white" href="#home">Home</a>
+            <a class="text-white" href="#news">News</a>
+            <a class="text-white" href="#contact">Contact</a>
+            <a class="text-white" href="#about">About</a>
         </div>
         <div class="">
-        <label class="text-white">Log in</label>
-        <button class="navbar-toggler" align="right" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" >
-            <span class="navbar-toggler-icon" align="right"></span>
-        </button></div>
+            <label class="text-white">Log in</label>
+            <button class="navbar-toggler" align="right" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" >
+                <span class="navbar-toggler-icon" align="right"></span>
+            </button></div>
     </nav>
 </div>
 <div class="container-fluid">
@@ -78,31 +76,31 @@
     </form>
 </div>
 
-    <script>
-        var modal = document.getElementById("registrationForm");
+<script>
+    var modal = document.getElementById("registrationForm");
 
-        // Get the button that opens the modal
-        var btn = document.getElementById("registerBtn");
+    // Get the button that opens the modal
+    var btn = document.getElementById("registerBtn");
 
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("cancel")[0];
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("cancel")[0];
 
-        // When the user clicks the button, open the modal
-        btn.onclick = function() {
-            modal.style.display = "block";
-        }
+    // When the user clicks the button, open the modal
+    btn.onclick = function() {
+        modal.style.display = "block";
+    }
 
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
             modal.style.display = "none";
         }
-
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
+    }
 </script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
