impl of CinemaWithObj and getAll method

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,15 +19,15 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" >cinemas</a></li>
-                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" >movies</a></li>
-                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" >cinema rooms</a></li>
-                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" >cities</a></li>
+                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/cinema/all" >cinemas</a></li>
+                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/seance/all " >Seances</a></li>
+                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/rooms/all">cinema rooms</a></li>
+                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/cities/all">cities</a></li>
                 </ul>
                 <ul class="nav navbar-nav flex-child-menu menu-right">
                     <li><a href="#">Statistics</a></li>
                     <li class="loginLink"><a href="#">LOG In</a></li>
-                    <li class="btn signupLink"><a href="#">sign up</a></li>
+                    <li class="btn signupLink"><a href="/sign-up">sign up</a></li>
                 </ul>
             </div>
         </nav>
