--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,17 +8,16 @@
 <header class="ht-header">
     <div class="container">
         <nav class="navbar navbar-default navbar-custom">
-            <div class="navbar-header logo">
-                <a href="index-2.html">
-                    <img class="logo" src="../../static/assets/images/logo1.png" th:src="@{/assets/images/logo1.png}"
-                         width="119" height="58"></a>
-            </div>
+
+
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse flex-parent" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav flex-child-menu menu-left">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    <li><a href="/" class="btn btn-default"><b>Home</b></a></li>
                     <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/cinema/all" >cinemas</a></li>
                     <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/seance/all " >Seances</a></li>
                     <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/rooms/all">cinema rooms</a></li>
