--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
                 </ul>
                 <ul class="nav navbar-nav flex-child-menu menu-right">
                     <li><a href="#">Statistics</a></li>
-                    <li class="loginLink"><a href="#">LOG In</a></li>
+                    <li class="loginLink"><a href="/admin">LOG In</a></li>
                     <li class="btn signupLink"><a href="/sign-up">sign up</a></li>
                 </ul>
             </div>
