--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -34,7 +34,7 @@
                     <div class="user-fav">
                         <p>Others</p>
                         <ul>
-                            <li><a href="#">Log out</a></li>
+                            <li><a href="/logout">Log out</a></li>
                         </ul>
                     </div>
                 </div>
