--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
                     <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/cinema/all" >cinemas</a></li>
                     <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/seance/all " >Seances</a></li>
                     <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/rooms/all">cinema rooms</a></li>
-                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/cities/all">cities</a></li>
+                    <li class="dropdown first"><a class="btn btn-default dropdown-toggle lv1" href="/city/all">cities</a></li>
                 </ul>
                 <ul class="nav navbar-nav flex-child-menu menu-right">
                     <li><a href="#">Statistics</a></li>
