--- a/src/main/resources/templates/cities.html
+++ b/src/main/resources/templates/cities.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="hero-ct">
-                    <h1>Cinemas</h1>
+                    <h1>Cities</h1>
                 </div>
             </div>
         </div>
