--- a/src/main/resources/templates/cities.html
+++ b/src/main/resources/templates/cities.html
@@ -22,7 +22,7 @@
 
                         <div class="movie-item-style-2">
                                 <div class="mv-item-infor">
-                                    <p> <span th:text="${city.getId()}"></span>. <span th:text="${city.getName()}"></span></p>
+                                    <p> <a href=""><span th:text="${city.getName()}"></span></p>
                                 </div>
                             </a>
                         </div>
