--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,8 @@
                     profil usera -> /user/id<br>
                     rejestracja -> /sign-up<br>
                     seanse -> /seance/all
+                    seanse w danym kinie -> /search/cinema/id/seance
+                    kina w danym miescie /search/city/id/cinema
                 </h1></span>
             </div>
         </div>
