--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,8 +13,8 @@
                 <h1> profil kina -> /cinema/id<br>
                     profil usera -> /user/id<br>
                     rejestracja -> /sign-up<br>
-                    seanse -> /seance/all
-                    seanse w danym kinie -> /search/cinema/id/seance
+                    seanse -> /seance/all<br>
+                    seanse w danym kinie -> /search/cinema/id/seance<br>
                     kina w danym miescie /search/city/id/cinema
                 </h1></span>
             </div>
