--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,11 +10,11 @@
         <div class="row ipad-width2">
             <div class="col-md-8 col-sm-12 col-xs-12">
                 <span style="color: #f0f8ff; ">
-                <h1> profil kina -> /cinema/id<br>
-                    profil usera -> /user/id<br>
-                    rejestracja -> /sign-up<br>
-                    seanse -> /seance/all<br>
-                    seanse w danym kinie -> /search/cinema/id/seance<br>
+                <h1> profil kina -> /cinema/id<br><br>
+                    profil usera -> /user/id<br><br>
+                    rejestracja -> /sign-up<br><br>
+                    seanse -> /seance/all<br><br>
+                    seanse w danym kinie -> /search/cinema/id/seance<br><br>
                     kina w danym miescie /search/city/id/cinema
                 </h1></span>
             </div>
