--- a/src/main/resources/templates/cinemas.html
+++ b/src/main/resources/templates/cinemas.html
@@ -21,15 +21,14 @@
                     <tr th:each="cinema: ${cinemas}">
 
                         <div class="movie-item-style-2">
-                            <a th:href="@{/cinema/{id}(id=${cinema.getId()})}">
                                 <img src="../static/images/uploads/mv-it2.jpg"
                                      th:src="@{/assets/images/uploads/mv-it2.jpg}">
                                 <div class="mv-item-infor">
-                                    <h6><span th:text="${cinema.city?.getName()}"></span></h6>
+                                    <h6><span th:text="${cinema.getName()}"></span></h6>
                                     <!--&lt;!&ndash;                            -->
-                                    <p>Cinema name: <span th:text="${cinema.getName()}"></span></p>
+                                    <p><span th:text="${cinema.city?.getName()}"></span></p>
+                                    <a href="seancesInCinema.html" th:href="@{/search/cinema/{cinemaId}/seance(cinemaId=${cinema.getId()})}">Show seances in this cinema</a>
                                 </div>
-                            </a>
                         </div>
 
                 </div>
