delete cinema in admin panel

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -4281,6 +4281,7 @@ ul {
 }
 .movie-item-style-2 .mv-item-infor h6 {
   margin-bottom: 10px;
+  color: #fff;
 }
 .movie-item-style-2 .mv-item-infor h6 a {
   font-family: 'Dosis', sans-serif;
