--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -22,7 +22,7 @@
                     <div class="user-fav">
                         <p>Database services</p>
                         <ul>
-                            <li><a href="admin/cinema">Cinemas</a></li>
+                            <li><a href="admin_cinemas.html" th:href="@{/admin/cinema}">Cinemas</a></li>
                             <li><a href="">Cinemas Rooms</a></li>
                             <li><a href="">Cities</a></li>
                             <li><a href="">Movies</a></li>
