--- a/src/main/resources/templates/admin_cinemas.html
+++ b/src/main/resources/templates/admin_cinemas.html
@@ -14,20 +14,30 @@
     </div>
 </div>
 
-<div class="page-single">
+<div class="page-single movie_list">
     <div class="container">
-        <div class="row ipad-width">
+        <div class="row ipad-width2">
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="form-style-1 user-information" action="#">
-                    <div class="user-fav">
-                        <p>Cinemas</p>
-                        <tr th:each="cinema: ${cinemas}">
-                            <ul><span th:text="${cinema.getName()}"></span></ul>
-                        </tr>
-                    </div>
+                <div class="form-style-1 user-information">
+                    <tr th:each="cinema: ${cinemas}">
+
+                        <div class="movie-item-style-2">
+                            <div class="mv-item-infor">
+                                <h6><span th:text="${cinema.getName()}"></span> (ID: <span th:text="${cinema.getId()}"></span>), <span th:text="${cinema.city?.getName()}"></span></h6>-->
+                                <!-- admin/cinema/delete/id -->
+
+                                <p> EDIT |
+                                    <a href="admin_cinemas.html" th:href="@{/admin/cinema/delete/{cinemaId}(cinemaId=${cinema.getId()})}">Delete</a>
+                                </p>
+                            </div>
+                        </div>
+
                 </div>
+
+                </tr>
             </div>
         </div>
     </div>
 </div>
+</body>
 <div th:replace="fragments/footer :: footer"></div>
