cities admin Get and Delete

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -22,9 +22,9 @@
                     <div class="user-fav">
                         <p>Database services</p>
                         <ul>
-                            <li><a href="admin_cinemas.html" th:href="@{/admin/cinema}">Cinemas</a></li>
+                            <li><a th:href="@{/admin/cinema}">Cinemas</a></li>
                             <li><a href="">Cinemas Rooms</a></li>
-                            <li><a href="">Cities</a></li>
+                            <li><a th:href="@{/admin/city}">Cities</a></li>
                             <li><a href="">Movies</a></li>
                             <li><a href="">Seances</a></li>
                             <li><a href="">Seats</a></li>
