--- a/src/main/resources/templates/admin_operation.html
+++ b/src/main/resources/templates/admin_operation.html
@@ -22,7 +22,7 @@
                     <div class="movie-item-style-2">
                         <div class="mv-item-infor">
                             <h6><span th:text="${status}"></span></h6>
-                            <a href="../">Go back</a>
+                            <a href="../" http-equiv="refresh">Go back</a>
                         </div>
                     </div>
                 </div>
