welcome message for user in menu

--- a/src/main/resources/templates/admin_cinemas.html
+++ b/src/main/resources/templates/admin_cinemas.html
@@ -50,7 +50,7 @@
                                 th:value="${city.getId()}"></option>
                     </select>
 
-                    <p><input th:href="admin_cinemas.html" type="submit" value="Add new city"></p>
+                    <p><input th:href="admin_cinemas.html" type="submit" value="Add new cinema"></p>
 
 
                 </form>
