url for login in menu changed

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
                         <span sec:authorize="isAuthenticated()">Hello, <span sec:authentication="name"></span>! | <a href="/logout">Logout</a>
                         </span>
                         <span sec:authorize="!isAuthenticated()">
-                            <a href="/admin">Login</a> | <a href="/sign-up">sign up</a>
+                            <a href="/loging">Login</a> | <a href="/sign-up">sign up</a>
                         </span>
 
                     </ul>
