Admin panel: ADD cinema room show cinema rooms remove cinema room changins statistics to profile

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -22,9 +22,9 @@
                     <div class="user-fav">
                         <p>Database services</p>
                         <ul>
-                            <li><a th:href="@{/admin/cinema}">Cinemas</a></li>
-                            <li><a href="">Cinemas Rooms</a></li>
                             <li><a th:href="@{/admin/city}">Cities</a></li>
+                            <li><a th:href="@{/admin/cinema}">Cinemas</a></li>
+                            <li><a th:href="@{/admin/cinemaRoom}">Cinemas Rooms</a></li>
                             <li><a href="">Movies</a></li>
                             <li><a href="">Seances</a></li>
                             <li><a href="">Seats</a></li>
@@ -43,3 +43,4 @@
     </div>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
+
