link to user profile

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,10 @@
                     </ul>
                     <ul class="nav navbar-nav flex-child-menu menu-right">
 
-                        <span sec:authorize="isAuthenticated()">Hello, <span sec:authentication="name"></span>! | <a href="/admin/">Profile</a> | <a href="/logout">Logout</a>
+                        <span sec:authorize="isAuthenticated()">Hello, <span sec:authentication="name"></span>! |
+                        <a href="/profile/edit">Profile</a> |
+                        <span sec:authorize="hasAuthority('ADMIN')"><a href="/admin">Panel admina</a> | </span>
+                        <a href="/logout">Logout</a>
                         </span>
                         <span sec:authorize="!isAuthenticated()">
                          <a href="/login">Login</a> | <a href="/sign-up">sign up</a>
