--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="hero-ct">
-                    <h1><span th:text="${user.getName()}">'s profile</span> </h1>
+                    <h1>Edit <span th:text="${user.getUsername()}"></span>'s profile </h1>
                 </div>
             </div>
         </div>
@@ -18,14 +18,23 @@
         <div class="row ipad-width2">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-style-1 user-information">
-                    <form th:action="@{/profile/edit}" method="post">
-                        <p>Name: <input type="text" name="name" pattern="[A-Z][a-z]+" required="required" th:value="${user.getName()}"> </p>
-                        <p>Surname: <input type="text" name="surname" pattern="[A-Z][a-z]+" required="required" th:value="${user.getSurname()}"> </p>
-                        <p>Username: <input type="text" name="username" required="required" th:value="${user.getSurname()}"> </p>
-                        <p>E-mail: <input type="text" name="email" pattern="([A-Za-z0-9]\.?)+@[A-Za-z0-9]+\.[a-z]+" required="required"> </p>
-                        <p>New Password: <input type="password" name="password" required="required"> </p>
-                        <p>Repeat new password: <input type="password" name="repeatedPassword" required="required"> </p>
-                        <input th:href="profile.html" type="submit" value="Edit profile">
+                    <form th:action="@{/profile/edit}" th:object="${user}" method="post">
+                        <p>Name: <input type="text" name="name" pattern="[A-Z][a-z]+" required th:field="*{name}"
+                                        th:placeholder="${user.getName()}"></p>
+                        <p>Surname: <input type="text" name="surname" pattern="[A-Z][a-z]+" required
+                                           th:field="*{surname}" th:placeholder="${user.getSurname()}"></p>
+                        <p>E-mail: <input type="text" name="email" pattern="([A-Za-z0-9]\.?)+@[A-Za-z0-9]+\.[a-z]+"
+                                          required th:field="*{email}" th:placeholder="${user.getEmail()}"></p>
+                        <!--<p>New Password: <input type="password" name="password" required="required" th:field="*{password}"> </p>
+                         <p>Repeat new password: <input type="password" name="repeatedPassword" required="required" th:field="*{password}"> </p> -->
+                        <p>Password: <input type="password" name="password" th:field="*{newPassword}"></p>
+                        <p>Username: (cannot be changed for the security reasons)
+                            <input type="text" name="username" required th:field="*{username}"
+                                   th:placeholder="${user.getUsername()}" readonly></p>
+                        <input type="hidden name="role" th:field="*{role}">
+                        <input type="hidden" name="id" th:field="*{id}">
+                        <input type="hidden" name="old_password" th:value="${user.getPassword()}" th:field="*{password}">
+                        <p><input th:href="index.html" type="submit" value="Edit profile"></p>
                     </form>
                 </div>
             </div>
